# zaphod

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.MD  bitwise.cpp  board.cpp  board.h  check.cppcheck  main.cpp  movegenerator.cpp  movegenerator.h  nnue_model.pth  perft.h  test.cpp  test.h
pynnue/: board.py  evaluate_position.py  evaluated_positions.txt  extract_model_parameters.py  feature_extractor.py  generate_trainingdata.py  input_biases.txt  input_biases_int.txt  input_weights_int.txt  nnue_model.pth  nnue_model.py  output_bias.txt  output_weights.txt  output_weights_int.txt  pieces.py  positions.epd  train_nnue.py
scripts/: benchmark_epd_runner.py  binary_trainer.py  convert_fen_to_flat_input.py  convert_txt_to_bin.py  epd_to_fen.py  eval.py  export_binary_model_quantized.py  export_model.py  export_model_quantized.py  generate_data.py  histogram_score.py  lmrplot.py  not_so_simple_trainer.py  phase_hist.py  phase_hist_nnue.py  score_fen.py  simple_trainer.py  trainer.py
src/: benchmark.cpp  bitboard.h  board.cpp  board.h  evaluation.h  generatedata.cpp  main.cpp  mainperft.cpp  material.cpp  material.h  move.h  movegenerator.cpp  movegenerator.h  nnue.cpp  nnue.h  nnueMain.cpp  nnue_test.h  nnueq.cpp  nnueq.h  params.h  pawns.cpp  pawns.h  perft.cpp  perft.h  search.cpp  search.h  test.cpp  test.h  tools.h  transpositiontable.h  ttable.cpp  ttable.h  tuner.cpp  tuner.h  tunermain.cpp  uci.cpp  uci.h
src/perft/: perft.h  perfttest.cpp  perfttest.h
src/tools/: fentools.h  openingbook.cpp  openingbook.h
test/: 4waytest.txt  testboard.cpp  testevaluation.cpp  testmaterial.cpp  testmove.cpp  testperft.cpp  testsearch.cpp  testtools.cpp  testtranspositiontable.cpp  testttable.cpp  testuci.cpp
tuning/: enrich_png.py  filter_png_by_phase.py  texel_phase_tuner.py  texel_tuner.py
